--- a/Sources/tech.macil.rustplus.sdPlugin/index_pi.html
+++ b/Sources/tech.macil.rustplus.sdPlugin/index_pi.html
@@ -15,7 +15,7 @@
   <body>
     <div class="sdpi-wrapper">
       <div class="sdpi-item" type="textarea">
-        <div class="sdpi-item-label">Connection Config (fcm-listen result)</div>
+        <div class="sdpi-item-label">Entity Config (fcm-listen result)</div>
         <details>
           <summary>Show</summary>
           <div class="sdpi-item-value textarea">
@@ -28,18 +28,6 @@
             ></textarea>
           </div>
         </details>
-      </div>
-
-      <div class="sdpi-item">
-        <div class="sdpi-item-label">Device ID</div>
-        <input
-          class="sdpi-item-value"
-          id="device-id"
-          value=""
-          placeholder="e.g. 123"
-          required
-          pattern="\d+"
-        />
       </div>
     </div>
 
