--- a/Sources/tech.macil.rustplus.sdPlugin/code.html
+++ b/Sources/tech.macil.rustplus.sdPlugin/code.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>tech.macil.rustplus</title>
+    <script src="common.js"></script>
+    <script src="long.js"></script>
+    <script src="protobuf.min.js"></script>
     <script src="code.js"></script>
   </head>
 
