link instructions in config area

--- a/Sources/tech.macil.rustplus.sdPlugin/index_pi.html
+++ b/Sources/tech.macil.rustplus.sdPlugin/index_pi.html
@@ -10,10 +10,20 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>tech.macil.rustplus Property Inspector</title>
     <link rel="stylesheet" href="css/sdpi.css" />
+    <link rel="stylesheet" href="index_pi.css" />
   </head>
 
   <body>
     <div class="sdpi-wrapper">
+      <div class="instructions">
+        See the
+        <a
+          href="https://github.com/Macil/streamdeck-rustplus#configuring"
+          target="_blank"
+          >Configuration page</a
+        >
+        for instructions on how to configure this.
+      </div>
       <div class="sdpi-item" type="textarea">
         <div class="sdpi-item-label">Entity Config (fcm-listen result)</div>
         <details>
